--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "normalize.css": "^8.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "less": "^3.0.1",
+    "npm": "^5.8.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
