--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Prvni package od npm init",
   "main": "index.php",
   "dependencies": {
+    "less": "^3.0.1",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
-    "less": "^3.0.1",
-    "npm": "^5.8.0"
+    "grunt": "^1.0.2",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-less": "^1.4.1",
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "webpack": "^4.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
